[gd_scene load_steps=15 format=2]

[ext_resource path="res://Crud Asset/influenzavirus.png" type="Texture" id=1]
[ext_resource path="res://Scene/Enemies/BlueTank.gd" type="Script" id=2]
[ext_resource path="res://Assets/UI/HPbar.jpg" type="Texture" id=3]
[ext_resource path="res://Assets/Sound Effect/SFX/footstep_grass_003.ogg" type="AudioStream" id=4]
[ext_resource path="res://Assets/Effect/tank_explosion2.png" type="Texture" id=5]
[ext_resource path="res://Assets/Effect/tank_explosion5.png" type="Texture" id=6]
[ext_resource path="res://Assets/Effect/tank_explosion6.png" type="Texture" id=7]
[ext_resource path="res://Assets/Effect/tank_explosion4.png" type="Texture" id=8]
[ext_resource path="res://Assets/Effect/tank_explosion3.png" type="Texture" id=9]
[ext_resource path="res://Assets/Effect/tank_explosion1.png" type="Texture" id=10]

[sub_resource type="CircleShape2D" id=1]
radius = 19.0

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 5 ), ExtResource( 9 ), ExtResource( 8 ), ExtResource( 10 ) ],
"loop": false,
"name": "explode",
"speed": 8.0
} ]

[sub_resource type="Animation" id=5]
resource_name = "Move"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 1 ),
"transitions": PoolRealArray( 0.196146, 3.24901, 0.148651 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.928, 0.774 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[node name="Influenzavirus" type="PathFollow2D" groups=["Attacker"]]
loop = false
script = ExtResource( 2 )

[node name="Body" type="KinematicBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Impact" type="Position2D" parent="."]
position = Vector2( -15, -15 )

[node name="ExplosionAnim" type="AnimatedSprite" parent="."]
frames = SubResource( 4 )

[node name="EffectTimer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enable = true
__meta__ = {
"_editor_description_": ""
}

[node name="HealthBar" type="TextureProgress" parent="CanvasLayer"]
margin_left = -30.0
margin_top = -38.0
margin_right = 30.0
margin_bottom = -32.0
rect_scale = Vector2( 0.6, 1 )
rect_pivot_offset = Vector2( 30, 6 )
value = 50.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 3 )
tint_under = Color( 0.298039, 0.298039, 0.298039, 1 )
tint_progress = Color( 0.0941176, 0.556863, 0.2, 1 )
nine_patch_stretch = true
__meta__ = {
"_editor_description_": ""
}

[node name="ExplosionSFX" type="AudioStreamPlayer2D" parent="." groups=["sfx"]]
stream = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../ExplosionSFX")
anims/Move = SubResource( 5 )
anims/RESET = SubResource( 3 )

[connection signal="timeout" from="EffectTimer" to="." method="_on_EffectTimer_timeout"]
